<resources>
    <string name="app_name">BookHub</string>
    <string name="dashboard">Dashboard</string>
    <string name="favourites">Favourites</string>
    <string name="profile">Profile</string>
    <string name="about_app">About App</string>
    <string name="navigation_drawer">BookHub</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_fragment">Dashboard Fragment</string>
    <string name="about_app_fragment">About App Fragment</string>
    <string name="favourites_fragment">Favourites Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="list_item">List Item</string>
    <string name="authour_of_book">Author of Book</string>
    <string name="rating">5.0</string>
    <string name="price">Rs. 499</string>
    <string name="check_internet">Check Internet</string>
    <string name="name_of_book">Name of Book</string>
    <string name="name_of_author">Name of Author</string>
    <string name="add_to_favourites">Add To Favourites</string>
    <string name="hello_world">Hello World</string>
    <string name="android_inc">Android Inc.</string>
    <string name="inc_android">Android Inc.</string>
    <string name="rs_499">Rs. 499</string>
    <string name="_4_5">4.5</string>
    <string name="about_the_app">About The App</string>
    <string name="action_sort">Sort</string>
</resources>