<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DescriptionActivity"
    android:background="#ffffff">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/design_default_color_primary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"/>
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="20dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/llContent"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal"
            android:weightSum="6">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/imgBookIcon"
                android:layout_weight="1.5"
                android:src="@drawable/ic_book"
                android:scaleType="centerCrop"
                android:padding="5dp"
                />
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3.3">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtBookName"
                    android:padding="8dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:text="@string/name_of_book"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtAuthor"
                    android:padding="6dp"
                    android:textSize="15sp"
                    android:textColor="#000000"
                    android:text="@string/name_of_author"
                    android:layout_below="@+id/txtBookName"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtPrice"
                    android:padding="6dp"
                    android:textSize="15sp"
                    android:textColor="#357a38"
                    android:textStyle="bold"
                    android:text="Price"
                    android:layout_below="@+id/txtAuthor" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/imgFavourites"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/star_ic"
                    android:padding="5dp"
                    android:layout_marginTop="3dp" />
                <TextView
                    android:id="@+id/txtRating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/_4_5"
                    android:textAlignment="center"
                    android:padding="5dp" />
            </LinearLayout>

        </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/llContent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtAboutTheBookStatic"
                    android:layout_centerHorizontal="true"
                    android:padding="6dp"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginTop="4dp"
                    android:text="@string/about_the_app" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtBookDesc"
                    android:padding="6dp"
                    android:layout_below="@+id/txtAboutTheBookStatic"
                    android:textSize="18sp"
                    android:text="@string/hello_blank_fragment"
                    android:textColor="#000000"
                    android:layout_margin="10dp"
                    />
                <Button
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnAddtoFav"
                    android:background="@color/design_default_color_primary"
                    android:text="@string/add_to_favourites"
                    android:textColor="#ffffff"
                    android:layout_alignParentBottom="true"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:layout_below="@+id/txtBookDesc"
                    android:layout_centerHorizontal="true" />

            </RelativeLayout>


        </RelativeLayout>

    </ScrollView>
    <RelativeLayout
        android:id="@+id/progressLayout"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>





</RelativeLayout>